bootstrap/monitoring/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-production
spec: {}
status: {}
